--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 node_modules
 DB_URL=mongodb+srv://Fortune-Tingbani:14May1995@cluster0.pdyyih7.mongodb.net/schoolAPI?retryWrites=true&w=majority
+
+.env
